k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 095055159670.dkr.ecr.ap-south-1.amazonaws.com/airline-backend:latest
          ports:
            - containerPort: 8000
          command: ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
